<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_yaskawa_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sara.federico99@hotmail.it">sara</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo-ros2-control</depend>
  <depend>controller_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>uclv_moveit_planner_ros2</depend>
  <depend>uclv_utilities</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
